# personal_agent

./: .gitignore  README.md  api.py  contract.md  docker-compose.yml  main.py  pyproject.toml  record_test.py  setup_db.py
backend/: Dockerfile  agents.py  api.py  constants.py  data_ingestion.py  data_models.py  pyproject.toml  rag_agent.py  record_test.py  speech_to_text.py  stt_agents.py
data/: dagbok.csv  mannen_med_klovarna.txt
explorations/: explore_vector_db.ipynb
frontend/: Dockerfile  app.py  pyproject.toml  speech_to_text.py
pa_agent/: pyproject.toml
pa_agent/src/pa_agent/: __init__.py  docker-compose.yml  main.py  pdf_to_text.py  setup_db.py
pa_agent/src/pa_agent/backend/: Dockerfile  Dockerfile.worker  api.py  calender.py  constants.py  crawl.py  data_ingestion.py  data_models.py  google_calendar.py  pdf_to_text.py  pyproject.toml  rag_agent.py  speech_to_text.py  stt_agents.py  text_to_speech.py  voice_transcription.py
pa_agent/src/pa_agent/data/: dagbok.csv  ijerph-20-03306-v2.txt  inrikes_crawl_100.json  kort_respons.txt  lycklig - avhandling.txt  omni.json  omni_cleaned.json  omni_cleaned_with_keywords.json  omni_full_crawl_100.json  tech_crawl_100.json  the-perma-model.txt  whr25.txt
pa_agent/src/pa_agent/explorations/: explore_scraping.ipynb  explore_stt.ipynb  explore_vector_db.ipynb
pa_agent/src/pa_agent/frontend/: Dockerfile  app.py  app_v2.py  app_v3.py  css.py  dashboard.py  plots.py  pyproject.toml  speech_to_text.py  utils.py
pa_agent/src/pa_agent/tests/: test_calendar.py  test_calendar_api.py
