[project]
name = "personal-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cffi>=2.0.0",
    "dotenv>=0.9.9",
    "edge-tts>=7.2.7",
    "fastapi>=0.128.0",
    "faster-whisper>=1.2.1",
    "google-generativeai>=0.8.6",
    "ipykernel>=7.1.0",
    "lancedb>=0.26.1",
    "pandas>=2.3.3",
    "pydantic>=2.12.5",
    "pydantic-ai>=1.44.0",
    "pygame>=2.6.1",
    "scipy>=1.17.0",
    "sounddevice>=0.5.3",
    "streamlit>=1.53.0",
]
