[project]
name = "pa-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Pontus Ågren Grundström", email = "pontus.agrengrundstrom@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "backend",
    "beautifulsoup4>=4.14.3",
    "firecrawl-py>=4.13.4",
    "frontend",
    "ipykernel>=7.1.0",
    "openai>=2.15.0",
    "pydantic-ai[openai]>=1.46.0",
]

[tool.uv.sources]
frontend = {workspace = true}
backend = {workspace = true}

[tool.uv.workspace]
members = ["src/pa_agent/frontend", "src/pa_agent/backend"]
