[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "google-generativeai>=0.8.6",
    "lancedb>=0.26.1",
    "pandas>=2.3.3",
    "fastapi>=0.128.0",
    "pydantic>=2.12.5",
    "pydantic-ai>=1.44.0",
    "faster-whisper>=1.2.1",
    "edge-tts>=7.2.7",
    "pypdf>=6.6.0",
    "pdfplumber>=0.11.9",
    "beautifulsoup4>=4.14.3",
    "firecrawl-py>=4.13.4",
]
